Fixed image too small on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 @font-face {
   font-family: "Cascadia Code";
   src: url("/fonts/CascadiaCode.ttf") format("truetype");
+  font-display: swap;
 }
 
 main {
